--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "1money-report",
-  "version": "1.0.0",
-  "description": "A minimal Electron application to create report from 1Money app",
-  "main": "main.js",
+  "name": "electron-webpack-quick-start",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "start": "electron ."
+    "dev": "electron-webpack dev",
+    "compile": "electron-webpack",
+    "dist": "yarn compile && electron-builder",
+    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stefanopassador/1Money-Report.git"
+  "dependencies": {
+    "source-map-support": "^0.5.10"
   },
-  "keywords": [
-    "Electron"
-  ],
-  "author": "stefanopassador",
-  "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^4.1.3"
+    "electron": "4.0.1",
+    "electron-builder": "20.38.4",
+    "electron-webpack": "^2.6.2",
+    "webpack": "4.28.4"
   }
 }
