--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
-    "source-map-support": "^0.5.10"
+    "source-map-support": "^0.5.10",
+    "plotly.js": "^1.33.0"
   },
   "devDependencies": {
     "electron": "4.0.1",
