Possible reading of csv -> Moving to macOS environment

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "d3": "^5.9.2",
+    "dataframe-js": "^1.4.1",
     "electron-compile": "^6.4.4",
     "electron-squirrel-startup": "^1.0.0"
   },
